[tool.poetry]
name = "trus4ai-safety-2024-figures"
version = "0.1.0"
description = ""
authors = ["José Antonio Parejo Maestre <japarejo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
pip = "^24.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
